# nicegui_aggrid

./: .gitignore  README.md  pyproject.toml
.trunk/: .gitignore  trunk.yaml
.trunk/configs/: .bandit  .pylintrc  .remarkrc.yaml  ruff.toml
src/: agdict.py  enterprise.py
src/nicegui_aggrid/: __init__.py  agdict.py  enterprise.py  fix_json_serializability.py
test/: agdict.py  fix_json_serializability.py  test.py  tmp.py
